// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LinearGenomeView genome view component renders one track, no blocks 1`] = `
<div
  className="LinearGenomeView-root-1"
>
  <div
    className="LinearGenomeView-linearGenomeView-2"
    style={
      Object {
        "display": "grid",
        "gridTemplateColumns": "[controls] 100px [blocks] auto",
        "gridTemplateRows": "[scale-bar] auto [track-foo] 20px [resize-foo] 3px",
        "height": "55px",
        "width": "800px",
      }
    }
  >
    <div
      className="LinearGenomeView-controls-3 LinearGenomeView-viewControls-4"
      style={
        Object {
          "gridRow": "scale-bar",
        }
      }
    >
      <button
        className="MuiButtonBase-root-14 MuiIconButton-root-8 LinearGenomeView-iconButton-7"
        disabled={false}
        onBlur={[Function]}
        onClick={[Function]}
        onContextMenu={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex="0"
        title="close this view"
        type="button"
      >
        <span
          className="MuiIconButton-label-13"
        >
          <span
            aria-hidden="true"
            className="material-icons MuiIcon-root-17 MuiIcon-fontSizeSmall-24"
          >
            close
          </span>
        </span>
        <span
          className="MuiTouchRipple-root-48"
        />
      </button>
      <button
        className="MuiButtonBase-root-14 MuiToggleButton-root-26"
        disabled={false}
        fontSize="small"
        onBlur={[Function]}
        onClick={[Function]}
        onContextMenu={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        size="small"
        style={
          Object {
            "minWidth": 0,
          }
        }
        tabIndex="0"
        title="configure view"
        type="button"
        value="configure"
      >
        <span
          className="MuiToggleButton-label-29"
        >
          <span
            aria-hidden="true"
            className="material-icons MuiIcon-root-17 MuiIcon-fontSizeSmall-24"
          >
            settings
          </span>
        </span>
        <span
          className="MuiTouchRipple-root-48"
        />
      </button>
      <button
        className="MuiButtonBase-root-14 MuiToggleButton-root-26"
        disabled={false}
        onBlur={[Function]}
        onClick={[Function]}
        onContextMenu={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex="0"
        title="select tracks"
        type="button"
        value="track_select"
      >
        <span
          className="MuiToggleButton-label-29"
        >
          <span
            aria-hidden="true"
            className="material-icons MuiIcon-root-17 MuiIcon-fontSizeSmall-24"
          >
            line_style
          </span>
        </span>
        <span
          className="MuiTouchRipple-root-48"
        />
      </button>
    </div>
    <div
      className="ScaleBar-scaleBar-30"
      style={
        Object {
          "gridColumn": "blocks",
          "gridRow": "scale-bar",
          "height": "32px",
          "width": "700px",
        }
      }
    />
    <div
      className="LinearGenomeView-zoomControls-6"
      style={
        Object {
          "right": 4,
        }
      }
    >
      <div
        className="ZoomControls-container-32"
        style={
          Object {
            "height": 32,
          }
        }
      >
        <button
          className="MuiButtonBase-root-14 MuiIconButton-root-8"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onContextMenu={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex="0"
          type="button"
        >
          <span
            className="MuiIconButton-label-13"
          >
            <span
              aria-hidden="true"
              className="material-icons MuiIcon-root-17 MuiIcon-fontSizeSmall-24"
            >
              zoom_out
            </span>
          </span>
          <span
            className="MuiTouchRipple-root-48"
          />
        </button>
        <div
          aria-orientation="horizontal"
          aria-valuemax={5.643856189774724}
          aria-valuemin={5.643856189774724}
          aria-valuenow={-0}
          className="MuiSlider-root-34 ZoomControls-slider-33"
          onClick={[Function]}
          onMouseDown={[Function]}
          onTouchMove={[Function]}
          onTouchStartCapture={[Function]}
          role="slider"
        >
          <div
            className="MuiSlider-container-35"
          >
            <div
              className="MuiSlider-track-36 MuiSlider-trackBefore-37"
              style={
                Object {
                  "transform": "translateY(-50%) scaleX(0)",
                }
              }
            />
            <div
              className="MuiSlider-thumbWrapper-39"
              style={
                Object {
                  "transform": "translateX(0%)",
                }
              }
            >
              <button
                className="MuiButtonBase-root-14 MuiSlider-thumb-40"
                onBlur={[Function]}
                onContextMenu={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onKeyUp={[Function]}
                onMouseDown={[Function]}
                onMouseLeave={[Function]}
                onMouseUp={[Function]}
                onTouchEnd={[Function]}
                onTouchMove={[Function]}
                onTouchStart={[Function]}
                onTouchStartCapture={[Function]}
                tabIndex="0"
                type="button"
              />
            </div>
            <div
              className="MuiSlider-track-36 MuiSlider-trackAfter-38"
              style={
                Object {
                  "transform": "translateY(-50%) scaleX(1)",
                }
              }
            />
          </div>
        </div>
        <button
          className="MuiButtonBase-root-14 MuiIconButton-root-8"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onContextMenu={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex="0"
          type="button"
        >
          <span
            className="MuiIconButton-label-13"
          >
            <span
              aria-hidden="true"
              className="material-icons MuiIcon-root-17 MuiIcon-fontSizeSmall-24"
            >
              zoom_in
            </span>
          </span>
          <span
            className="MuiTouchRipple-root-48"
          />
        </button>
      </div>
    </div>
    <div
      className="LinearGenomeView-controls-3 LinearGenomeView-trackControls-5"
      style={
        Object {
          "gridColumn": "controls",
          "gridRow": "track-foo",
        }
      }
    >
      <p
        className="MuiTypography-root-57 MuiTypography-body1-66 TrackControls-trackName-55"
      >
        foo
      </p>
      <span
        className="MuiTypography-root-57 MuiTypography-caption-67 MuiTypography-colorTextSecondary-90 TrackControls-trackDescription-56"
      >
        
      </span>
    </div>
    <div
      className="TrackRenderingContainer-trackRenderingContainer-93"
      role="presentation"
      style={
        Object {
          "gridColumn": "blocks",
          "gridRow": "track-foo",
          "width": "700px",
        }
      }
    >
      <div
        className="TrackRenderingNotImplemented"
      >
        Rendering not implemented for 
        tester
         tracks
      </div>
    </div>
    <div
      className="TrackResizeHandle-dragHandle-94"
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseMove={[Function]}
      onMouseUp={[Function]}
      role="presentation"
      style={
        Object {
          "gridColumn": "span 2",
          "gridRow": "resize-foo",
        }
      }
    />
  </div>
</div>
`;

exports[`LinearGenomeView genome view component renders two tracks, two regions 1`] = `
<div
  className="LinearGenomeView-root-1"
>
  <div
    className="LinearGenomeView-linearGenomeView-2"
    style={
      Object {
        "display": "grid",
        "gridTemplateColumns": "[controls] 100px [blocks] auto",
        "gridTemplateRows": "[scale-bar] auto [track-foo] 20px [resize-foo] 3px [track-bar] 20px [resize-bar] 3px",
        "height": "78px",
        "width": "800px",
      }
    }
  >
    <div
      className="LinearGenomeView-controls-3 LinearGenomeView-viewControls-4"
      style={
        Object {
          "gridRow": "scale-bar",
        }
      }
    >
      <button
        className="MuiButtonBase-root-14 MuiIconButton-root-8 LinearGenomeView-iconButton-7"
        disabled={false}
        onBlur={[Function]}
        onClick={[Function]}
        onContextMenu={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex="0"
        title="close this view"
        type="button"
      >
        <span
          className="MuiIconButton-label-13"
        >
          <span
            aria-hidden="true"
            className="material-icons MuiIcon-root-17 MuiIcon-fontSizeSmall-24"
          >
            close
          </span>
        </span>
        <span
          className="MuiTouchRipple-root-48"
        />
      </button>
      <button
        className="MuiButtonBase-root-14 MuiToggleButton-root-26"
        disabled={false}
        fontSize="small"
        onBlur={[Function]}
        onClick={[Function]}
        onContextMenu={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        size="small"
        style={
          Object {
            "minWidth": 0,
          }
        }
        tabIndex="0"
        title="configure view"
        type="button"
        value="configure"
      >
        <span
          className="MuiToggleButton-label-29"
        >
          <span
            aria-hidden="true"
            className="material-icons MuiIcon-root-17 MuiIcon-fontSizeSmall-24"
          >
            settings
          </span>
        </span>
        <span
          className="MuiTouchRipple-root-48"
        />
      </button>
      <button
        className="MuiButtonBase-root-14 MuiToggleButton-root-26"
        disabled={false}
        onBlur={[Function]}
        onClick={[Function]}
        onContextMenu={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex="0"
        title="select tracks"
        type="button"
        value="track_select"
      >
        <span
          className="MuiToggleButton-label-29"
        >
          <span
            aria-hidden="true"
            className="material-icons MuiIcon-root-17 MuiIcon-fontSizeSmall-24"
          >
            line_style
          </span>
        </span>
        <span
          className="MuiTouchRipple-root-48"
        />
      </button>
    </div>
    <div
      className="ScaleBar-scaleBar-30"
      style={
        Object {
          "gridColumn": "blocks",
          "gridRow": "scale-bar",
          "height": "32px",
          "width": "700px",
        }
      }
    >
      <div
        className="Block-block-95 Block-leftBorder-96 Block-rightBorder-97"
        style={
          Object {
            "left": "0px",
            "width": "100px",
          }
        }
      >
        <svg
          height={32}
          width={100}
        >
          <line
            className="Ruler-majorTick-99"
            data-bp={-1}
            stroke="#555"
            strokeWidth={1}
            x1={-1}
            x2={-1}
            y1={0}
            y2={6}
          />
          <line
            className="Ruler-minorTick-100"
            data-bp={19}
            stroke="#999"
            strokeWidth={1}
            x1={19}
            x2={19}
            y1={0}
            y2={4}
          />
          <line
            className="Ruler-minorTick-100"
            data-bp={39}
            stroke="#999"
            strokeWidth={1}
            x1={39}
            x2={39}
            y1={0}
            y2={4}
          />
          <line
            className="Ruler-minorTick-100"
            data-bp={59}
            stroke="#999"
            strokeWidth={1}
            x1={59}
            x2={59}
            y1={0}
            y2={4}
          />
          <line
            className="Ruler-minorTick-100"
            data-bp={79}
            stroke="#999"
            strokeWidth={1}
            x1={79}
            x2={79}
            y1={0}
            y2={4}
          />
          <line
            className="Ruler-majorTick-99"
            data-bp={99}
            stroke="#555"
            strokeWidth={1}
            x1={99}
            x2={99}
            y1={0}
            y2={6}
          />
          <line
            className="Ruler-minorTick-100"
            data-bp={119}
            stroke="#999"
            strokeWidth={1}
            x1={119}
            x2={119}
            y1={0}
            y2={4}
          />
          <text
            className="Ruler-majorTickLabel-98"
            dominantBaseline="hanging"
            style={
              Object {
                "fontSize": "11px",
              }
            }
            x={-4}
            y={7}
          >
            0
          </text>
          <text
            className="Ruler-majorTickLabel-98"
            dominantBaseline="hanging"
            style={
              Object {
                "fontSize": "11px",
              }
            }
            x={96}
            y={7}
          >
            100
          </text>
        </svg>
      </div>
      <div
        className="ScaleBar-refLabel-31"
      >
        ctgA
      </div>
    </div>
    <div
      className="LinearGenomeView-zoomControls-6"
      style={
        Object {
          "right": 4,
        }
      }
    >
      <div
        className="ZoomControls-container-32"
        style={
          Object {
            "height": 32,
          }
        }
      >
        <button
          className="MuiButtonBase-root-14 MuiIconButton-root-8"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onContextMenu={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex="0"
          type="button"
        >
          <span
            className="MuiIconButton-label-13"
          >
            <span
              aria-hidden="true"
              className="material-icons MuiIcon-root-17 MuiIcon-fontSizeSmall-24"
            >
              zoom_out
            </span>
          </span>
          <span
            className="MuiTouchRipple-root-48"
          />
        </button>
        <div
          aria-orientation="horizontal"
          aria-valuemax={5.643856189774724}
          aria-valuemin={5.643856189774724}
          aria-valuenow={-0}
          className="MuiSlider-root-34 ZoomControls-slider-33"
          onClick={[Function]}
          onMouseDown={[Function]}
          onTouchMove={[Function]}
          onTouchStartCapture={[Function]}
          role="slider"
        >
          <div
            className="MuiSlider-container-35"
          >
            <div
              className="MuiSlider-track-36 MuiSlider-trackBefore-37"
              style={
                Object {
                  "transform": "translateY(-50%) scaleX(0)",
                }
              }
            />
            <div
              className="MuiSlider-thumbWrapper-39"
              style={
                Object {
                  "transform": "translateX(0%)",
                }
              }
            >
              <button
                className="MuiButtonBase-root-14 MuiSlider-thumb-40"
                onBlur={[Function]}
                onContextMenu={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onKeyUp={[Function]}
                onMouseDown={[Function]}
                onMouseLeave={[Function]}
                onMouseUp={[Function]}
                onTouchEnd={[Function]}
                onTouchMove={[Function]}
                onTouchStart={[Function]}
                onTouchStartCapture={[Function]}
                tabIndex="0"
                type="button"
              />
            </div>
            <div
              className="MuiSlider-track-36 MuiSlider-trackAfter-38"
              style={
                Object {
                  "transform": "translateY(-50%) scaleX(1)",
                }
              }
            />
          </div>
        </div>
        <button
          className="MuiButtonBase-root-14 MuiIconButton-root-8"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onContextMenu={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex="0"
          type="button"
        >
          <span
            className="MuiIconButton-label-13"
          >
            <span
              aria-hidden="true"
              className="material-icons MuiIcon-root-17 MuiIcon-fontSizeSmall-24"
            >
              zoom_in
            </span>
          </span>
          <span
            className="MuiTouchRipple-root-48"
          />
        </button>
      </div>
    </div>
    <div
      className="LinearGenomeView-controls-3 LinearGenomeView-trackControls-5"
      style={
        Object {
          "gridColumn": "controls",
          "gridRow": "track-foo",
        }
      }
    >
      <p
        className="MuiTypography-root-57 MuiTypography-body1-66 TrackControls-trackName-55"
      >
        foo
      </p>
      <span
        className="MuiTypography-root-57 MuiTypography-caption-67 MuiTypography-colorTextSecondary-90 TrackControls-trackDescription-56"
      >
        
      </span>
    </div>
    <div
      className="TrackRenderingContainer-trackRenderingContainer-93"
      role="presentation"
      style={
        Object {
          "gridColumn": "blocks",
          "gridRow": "track-foo",
          "width": "700px",
        }
      }
    >
      <div
        className="TrackRenderingNotImplemented"
      >
        Rendering not implemented for 
        tester
         tracks
      </div>
    </div>
    <div
      className="TrackResizeHandle-dragHandle-94"
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseMove={[Function]}
      onMouseUp={[Function]}
      role="presentation"
      style={
        Object {
          "gridColumn": "span 2",
          "gridRow": "resize-foo",
        }
      }
    />
    <div
      className="LinearGenomeView-controls-3 LinearGenomeView-trackControls-5"
      style={
        Object {
          "gridColumn": "controls",
          "gridRow": "track-bar",
        }
      }
    >
      <p
        className="MuiTypography-root-57 MuiTypography-body1-66 TrackControls-trackName-55"
      >
        bar
      </p>
      <span
        className="MuiTypography-root-57 MuiTypography-caption-67 MuiTypography-colorTextSecondary-90 TrackControls-trackDescription-56"
      >
        
      </span>
    </div>
    <div
      className="TrackRenderingContainer-trackRenderingContainer-93"
      role="presentation"
      style={
        Object {
          "gridColumn": "blocks",
          "gridRow": "track-bar",
          "width": "700px",
        }
      }
    >
      <div
        className="TrackRenderingNotImplemented"
      >
        Rendering not implemented for 
        tester
         tracks
      </div>
    </div>
    <div
      className="TrackResizeHandle-dragHandle-94"
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseMove={[Function]}
      onMouseUp={[Function]}
      role="presentation"
      style={
        Object {
          "gridColumn": "span 2",
          "gridRow": "resize-bar",
        }
      }
    />
  </div>
</div>
`;

exports[`LinearGenomeView genome view component renders with an empty model 1`] = `
<div
  className="LinearGenomeView-root-1"
>
  <div
    className="LinearGenomeView-linearGenomeView-2"
    style={
      Object {
        "display": "grid",
        "gridTemplateColumns": "[controls] 100px [blocks] auto",
        "gridTemplateRows": "[scale-bar] auto ",
        "height": "32px",
        "width": "800px",
      }
    }
  >
    <div
      className="LinearGenomeView-controls-3 LinearGenomeView-viewControls-4"
      style={
        Object {
          "gridRow": "scale-bar",
        }
      }
    >
      <button
        className="MuiButtonBase-root-14 MuiIconButton-root-8 LinearGenomeView-iconButton-7"
        disabled={false}
        onBlur={[Function]}
        onClick={[Function]}
        onContextMenu={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex="0"
        title="close this view"
        type="button"
      >
        <span
          className="MuiIconButton-label-13"
        >
          <span
            aria-hidden="true"
            className="material-icons MuiIcon-root-17 MuiIcon-fontSizeSmall-24"
          >
            close
          </span>
        </span>
        <span
          className="MuiTouchRipple-root-48"
        />
      </button>
      <button
        className="MuiButtonBase-root-14 MuiToggleButton-root-26"
        disabled={false}
        fontSize="small"
        onBlur={[Function]}
        onClick={[Function]}
        onContextMenu={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        size="small"
        style={
          Object {
            "minWidth": 0,
          }
        }
        tabIndex="0"
        title="configure view"
        type="button"
        value="configure"
      >
        <span
          className="MuiToggleButton-label-29"
        >
          <span
            aria-hidden="true"
            className="material-icons MuiIcon-root-17 MuiIcon-fontSizeSmall-24"
          >
            settings
          </span>
        </span>
        <span
          className="MuiTouchRipple-root-48"
        />
      </button>
      <button
        className="MuiButtonBase-root-14 MuiToggleButton-root-26"
        disabled={false}
        onBlur={[Function]}
        onClick={[Function]}
        onContextMenu={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex="0"
        title="select tracks"
        type="button"
        value="track_select"
      >
        <span
          className="MuiToggleButton-label-29"
        >
          <span
            aria-hidden="true"
            className="material-icons MuiIcon-root-17 MuiIcon-fontSizeSmall-24"
          >
            line_style
          </span>
        </span>
        <span
          className="MuiTouchRipple-root-48"
        />
      </button>
    </div>
    <div
      className="ScaleBar-scaleBar-30"
      style={
        Object {
          "gridColumn": "blocks",
          "gridRow": "scale-bar",
          "height": "32px",
          "width": "700px",
        }
      }
    />
    <div
      className="LinearGenomeView-zoomControls-6"
      style={
        Object {
          "right": 4,
        }
      }
    >
      <div
        className="ZoomControls-container-32"
        style={
          Object {
            "height": 32,
          }
        }
      >
        <button
          className="MuiButtonBase-root-14 MuiIconButton-root-8"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onContextMenu={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex="0"
          type="button"
        >
          <span
            className="MuiIconButton-label-13"
          >
            <span
              aria-hidden="true"
              className="material-icons MuiIcon-root-17 MuiIcon-fontSizeSmall-24"
            >
              zoom_out
            </span>
          </span>
          <span
            className="MuiTouchRipple-root-48"
          />
        </button>
        <div
          aria-orientation="horizontal"
          aria-valuemax={5.643856189774724}
          aria-valuemin={5.643856189774724}
          aria-valuenow={-0}
          className="MuiSlider-root-34 ZoomControls-slider-33"
          onClick={[Function]}
          onMouseDown={[Function]}
          onTouchMove={[Function]}
          onTouchStartCapture={[Function]}
          role="slider"
        >
          <div
            className="MuiSlider-container-35"
          >
            <div
              className="MuiSlider-track-36 MuiSlider-trackBefore-37"
              style={
                Object {
                  "transform": "translateY(-50%) scaleX(0)",
                }
              }
            />
            <div
              className="MuiSlider-thumbWrapper-39"
              style={
                Object {
                  "transform": "translateX(0%)",
                }
              }
            >
              <button
                className="MuiButtonBase-root-14 MuiSlider-thumb-40"
                onBlur={[Function]}
                onContextMenu={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onKeyUp={[Function]}
                onMouseDown={[Function]}
                onMouseLeave={[Function]}
                onMouseUp={[Function]}
                onTouchEnd={[Function]}
                onTouchMove={[Function]}
                onTouchStart={[Function]}
                onTouchStartCapture={[Function]}
                tabIndex="0"
                type="button"
              />
            </div>
            <div
              className="MuiSlider-track-36 MuiSlider-trackAfter-38"
              style={
                Object {
                  "transform": "translateY(-50%) scaleX(1)",
                }
              }
            />
          </div>
        </div>
        <button
          className="MuiButtonBase-root-14 MuiIconButton-root-8"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onContextMenu={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex="0"
          type="button"
        >
          <span
            className="MuiIconButton-label-13"
          >
            <span
              aria-hidden="true"
              className="material-icons MuiIcon-root-17 MuiIcon-fontSizeSmall-24"
            >
              zoom_in
            </span>
          </span>
          <span
            className="MuiTouchRipple-root-48"
          />
        </button>
      </div>
    </div>
  </div>
</div>
`;
